# PQC

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  README.md  SCIENTIFIC_RESULTS.md  experiment_benchmark.c  test_saberx2_complete.c
BATCHING/: README.md
BATCHING/include/: saber_batch.h
docs/: ARCHITECTURE.md  CODE_AUTHORSHIP_AUDIT.md  EXPERIMENTAL_METHODOLOGY.md  FAST_V4_ENGINEERING_CONTRIBUTIONS.md  FAST_V4_PERFORMANCE_RESULTS.md  MEASUREMENT_CHEATSHEET.md  METHODOLOGY.md  README.md  TRUE_NEON_BATCHING.md
docs/architecture/: BATCHING.md
docs/archive/: INDEX.md  PROJECT_SUMMARY.md
docs/development/: COINS_GENERATION_ANALYSIS.md  SIMPLE_FIX_PARALLEL_SHAKE.md  TASK_COMPLETION_REPORT.md  WORK_SUMMARY.md
docs/guides/: QUICKSTART.md
docs/research/: ADAPTIVE_CRITERIA.md  CONFIGURATION_COMPARISON.md  DIPLOMA_RESEARCH_DESCRIPTION.md  METHODOLOGY.md  SABERX2_RESULTS.md
examples/: experiment_benchmark.c
include/: api.h  cbd_neon.h  config.h  core.h  encap_hooks.h  fo_utils.h  hash.h  pack_unpack_fast.h  pack_unpack_neon.h  params.h  poly.h  poly_amx.h  rng.h
include/batch/: batch2_kem.h  batch2_poly.h  batch4_kem.h  batch_core.h  batch_kem.h  neon_batch2_core.h  neon_batch2_cpa.h  neon_batch2_kem.h  neon_batch_poly.h  saberx2_kem.h
scripts/: bench_all.sh  build_all.sh  build_all_complete.sh  compile_tests.sh  rigorous_benchmark.py  rigorous_benchmark_demo.py
src/: kem.c
src/batch/: batch2_kem.c  batch2_kem_simple.c  batch2_poly_core.c  batch2_toom_cook.c  batch4_neon.c  batch_core.c  batch_kem.c  batch_kem_neon.c  fips202x2_neon.c  fips202x2_neon_real.c  fips202x2_simple.c  indcpa2x.c  indcpa2x.h  kem2x_complete.c  neon_batch2_core.c  neon_batch2_cpa.c  neon_batch2_kem.c  neon_batch_poly.c  neon_poly_batch.c  neon_poly_batch.h  neon_x2_helpers.c  saberx2_indcpa.h  saberx2_indcpa_real.c  saberx2_indcpa_simple.c  saberx2_kem.c  saberx2_neon_real.c  saberx2_neon_simple.c  saberx2_real_crypto.c  saberx4_indcpa.c  saberx4_kem.c
src/core/: core.c
src/fo_utils/: fo_utils_batch.c  fo_utils_chacha_neon.c  fo_utils_ref.c
src/hash/: hash_gost.c  hash_sha3.c
src/kem/: core_neon_ntt_wrapper.c  kem_fast_v4_optimized.c
src/poly/: poly_fast_v4_addon.c  poly_genmatrix.c  poly_ntt_neon.c  poly_toom.c
src/rng/: rng_gost_ctr.c  rng_system.c
tests/: test_batch2_simple.c  test_batch_kem.c  test_kem_correctness.c  test_neon_batch2_correctness.c
